Spacing fix

--- a/autoscheduler/frontend/src/components/SchedulingPage/SchedulingPage.css
+++ b/autoscheduler/frontend/src/components/SchedulingPage/SchedulingPage.css
@@ -43,6 +43,6 @@
     }
     .middle-column {
         margin-left: 16px;
-        margin-right: 8px;
+        margin-right: 16px;
     }
 }
